# base-scimath

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  askap_scimath.cc.in  askap_scimath.h  askap_scimath.h.in  dependencies.default
askap/scimath/fft/: FFTWrapper.cc  FFTWrapper.h
askap/scimath/fitting/: Axes.cc  Axes.h  CalParamNameHelper.cc  CalParamNameHelper.h  ComplexDiff.cc  ComplexDiff.h  ComplexDiffMatrix.cc  ComplexDiffMatrix.h  ComplexDiffMatrix.tcc  CompositeEquation.cc  CompositeEquation.h  DesignMatrix.cc  DesignMatrix.h  Equation.cc  Equation.h  GenericEquation.cc  GenericEquation.h  GenericNormalEquations.cc  GenericNormalEquations.h  INormalEquations.h  ISerializable.cc  ImagingEquation.cc  ImagingEquation.h  ImagingNormalEquations.cc  ImagingNormalEquations.h  IndexedNormalMatrix.cc  IndexedNormalMatrix.h  JonesIndex.cc  JonesIndex.h  LinearSolver.cc  LinearSolver.h  LinearSolverLsqrUtils.cc  LinearSolverLsqrUtils.h  LinearSolverUtils.cc  LinearSolverUtils.h  NormalEquationsStub.cc  NormalEquationsStub.h  Params.cc  Params.h  ParamsCasaTable.cc  (+11 more)
askap/scimath/lsqr_solver/: LSQRSolver.cc  LSQRSolver.h  MathUtils.cc  MathUtils.h  ModelDamping.cc  ModelDamping.h  ParallelTools.cc  ParallelTools.h  SparseMatrix.cc  SparseMatrix.h
askap/scimath/utils/: CasaBlobUtils.cc  CasaBlobUtils.h  ComplexGaussianNoise.cc  DeepCopyUtils.h  DelayEstimator.cc  EigenDecompose.cc  EigenDecompose.h  FixedSizeCache.h  ImageUtils.cc  ImageUtils.tcc  MultiDimArrayPlaneIter.cc  MultiDimArrayPlaneIter.h  MultiDimArrayPlaneIter.tcc  MultiDimPosIter.cc  MultiDimPosIter.h  PaddingUtils.cc  PaddingUtils.h  PaddingUtils.tcc  PhaseUnwrapper.h  PhaseUnwrapper.tcc  PolConverter.cc  PolConverter.h  SharedGSLTypes.cc  SharedGSLTypes.h  SpheroidalFunction.cc  SpheroidalFunction.h
cmake/: FindCPPUnit.cmake  FindImagemath.cmake  askap-scimath-config.cmake.in
fft/: FFTWrapper.cc
fitting/: Axes.cc  ComplexDiff.cc  ComplexDiff.h  ComplexDiffMatrix.cc  ComplexDiffMatrix.h  ComplexDiffMatrix.tcc  DesignMatrix.cc  DesignMatrix.h  Equation.cc  Equation.h  GenericEquation.cc  GenericNormalEquations.cc  GenericNormalEquations.h  INormalEquations.h  ImagingEquation.cc  ImagingNormalEquations.cc  ImagingNormalEquations.h  LinearSolver.cc  LinearSolver.h  LinearSolverLsqrUtils.cc  LinearSolverLsqrUtils.h  LinearSolverUtils.cc  LinearSolverUtils.h  NormalEquationsStub.cc  NormalEquationsStub.h  Params.cc  Params.h  ParamsCasaTable.cc  ParamsCasaTable.h  PolXProducts.cc  PolXProducts.h  PolynomialEquation.cc  PolynomialEquation.h  Solveable.cc  Solveable.h  Solver.cc
lsqr_solver/: LSQRSolver.cc
tests/fft/: CMakeLists.txt  FFTTest.h  tfft.cc
tests/fitting/: AxesTest.h  CMakeLists.txt  ComplexDiffMatrixTest.h  ComplexDiffTest.h  DesignMatrixTest.h  GeneralFittingTest.h  GenericNormalEquationsTest.h  ImagingNormalEquationsTest.h  NormalEquationsStubTest.h  ParamsTableTest.h  ParamsTest.h  PolXProductsTest.h  PolynomialEquationTest.h  tfitting.cc
tests/lsqr_solver/: CMakeLists.txt  LSQRSolverTest.h  MathUtilsTest.h  ModelDampingTest.h  SparseMatrixTest.h  tlsqr_solver.cc
tests/utils/: CMakeLists.txt  CasaBlobUtilsTest.h  DelayEstimatorTest.h  EigenDecomposeTest.h  FixedSizeCacheTest.h  MultiDimArrayPlaneIterTest.h  MultiDimPosIterTest.h  PaddingUtilsTest.h  PolConverterTest.h  SharedGSLTypesTest.h  SpheroidalFunctionTest.h  tutils.cc
utils/: CasaBlobUtils.cc  CasaBlobUtils.h  ChangeMonitor.h  ComplexGaussianNoise.cc  ComplexGaussianNoise.h  DelayEstimator.cc  DelayEstimator.h  EigenDecompose.cc  FixedSizeCache.h  ImageUtils.cc  ImageUtils.h  MultiDimArrayPlaneIter.cc  MultiDimArrayPlaneIter.h  MultiDimArrayPlaneIter.tcc  MultiDimPosIter.cc  PaddingUtils.cc  PaddingUtils.h  PaddingUtils.tcc  PhaseUnwrapper.h  PolConverter.cc  SpheroidalFunction.cc
